syntax = "proto3";

package workout_training_api.ping.v1;

option go_package="workout-training-api/internal/grpc/generated/workout-training-api/workout/v1";

import "google/protobuf/timestamp.proto";


message GenerateReportRequest {
    string user_id = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
}

message GenerateReportResponse {
    string report = 1;
}

